Prevent contact us from shifting when there is a vertical scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -486,7 +486,7 @@ p {
   }
   .navbar {
     padding-left: 1.875rem;
-    padding-right: 1.875rem;
+    padding-right: calc(1.875rem - 100vw + 100%);
     height: 5rem;
   }
   .navbar-link {
@@ -533,7 +533,7 @@ p {
   }
   .navbar {
     padding-left: 3.75rem;
-    padding-right: 3.75rem;
+    padding-right: calc(3.75rem - 100vw + 100%);
     height: 6rem;
   }
   .navbar-link {
